2003-07-24 Vee Satayamas <virasj@users.sourceforge.net>
	* initialize changelog for v4/wordcut