@@ -1,6 +1,6 @@
 INCLUDES= -I$(top_srcdir)
 
-libwordcut_HEADERS=wordcut.h wordcut_dict.h xmalloc.h
+libwordcut_HEADERS=wordcut.h wordcut_dict.h xmalloc.h path.h
 libwordcutdir=$(includedir)/wordcut
 
 bin_PROGRAMS=wordcut_mkdict wordcut wordcut_dict_dump
